# BullsAITrading

./: .flake8  .gitignore  .pre-commit-config.yaml  ABOUT.md  DRY_IMPLEMENTATION_SUMMARY.md  LOCAL_SETUP.md  Makefile  README.md  README_PORTFOLIO_MANAGER.md  adjust_risk_factors.py  fix_imports.py  pyproject.toml  qf_lib_backtest_results.json  real_ai_recommendations.py  requirements.txt  requirements_focused.txt  requirements_portfolio.txt  run_four_model_recommendations.py  run_portfolio.py  run_quantai.py  run_quantai_commands.md  run_with_risk_factors.py  setup_local.sh  test_four_model_approach.py  test_recommendations.py  trained_ensemble_test_results.json
.github/workflows/: ci.yml  simple-ci.yml
apps/backtesting/: base_backtester.py  unified_backtesting_system.py
apps/backtesting/backtesters/: __init__.py  advanced_quantitative_backtest_results.json  advanced_quantitative_backtester.py  focused_5_ticker_backtest_results.json  focused_5_ticker_backtester.py  qf_lib_backtest_results.json  qf_lib_backtester.py  simple_backtest.py  simple_backtest_results.json  standalone_backtest.py  standalone_backtest_results.json  unified_backtester.py
apps/portfolio/: enhanced_portfolio_manager.py  local_portfolio_manager.py  portfolio_manager_main.py
apps/trading/: focused_quantai_main.py  main.py
archive/dry_fixes_backup/: adjust_risk_factors.py_20250928_122734  base_backtester.py_20250928_122734  basic_ml_models.py_20250928_122734  cli.py_20250928_122734  dashboard_api.py_20250928_122734  data_sources.py_20250928_122734  db_manager.py_20250928_122734  deploy_four_model_system.py_20250928_122734  feature_engineering.py_20250928_122734  feedback_trainer.py_20250928_122734  fix_dry_violations.py_20250928_122734  focused_data_pipeline.py_20250928_122734  focused_quantai_main.py_20250928_122734  focused_risk_management.py_20250928_122734  focused_training_pipeline.py_20250928_122734  four_model_engine.py_20250928_122734  main.py_20250928_122734  ml_ensemble_model.py_20250928_122734  portfolio_manager_main.py_20250928_122734  real_market_data_integration.py_20250928_122734  run_backtest.py_20250928_122734  run_four_model_recommendations.py_20250928_122734  sentiment_analysis.py_20250928_122734  sentiment_model.py_20250928_122734  settings.py_20250928_122734  setup_market_data.py_20250928_122734  test_four_model_approach.py_20250928_122734  test_four_model_system.py_20250928_122734  test_integrated_engine.py_20250928_122734  test_recommendations.py_20250928_122734  trading_models.py_20250928_122734  train_ml_ensemble.py_20250928_122734  unified_backtester.py_20250928_122734  user_journey.py_20250928_122734  working_decision_engine.py_20250928_122734
archive/duplicate_files/: settings.py
config/: project_config.json  qf_lib_secret_settings.json  qf_lib_settings.json
config/local/: portfolio_config.json
docs/: ABOUT.md  ARCHITECTURE.md  CODING_STANDARDS.md  QF_LIB_SETUP.md  README.md  RISK_FACTORS.md
models/: decision_tree_model.json  linear_model_model.json  ml_ensemble_metadata.json  naive_bayes_model.json  simple_ensemble_metadata.json
scripts/: check_dry_compliance.py  check_qf_lib_structure.py  cleanup_project.py  deploy_four_model_system.py  fix_dry_violations.py  project_manager.py  run_qf_backtest.py  run_qf_lib_simple.py  setup_market_data.py  setup_qf_lib.py  test_four_model_system.py  test_integrated_engine.py  test_qf_env.py  test_qf_lib_setup.py  test_qf_lib_simple.py  test_trained_ensemble.py  train_ml_ensemble.py  train_models.py  train_simple_ensemble.py
src/: __init__.py
src/api/: __init__.py  main.py  portfolio_api.py
src/backtesting/: __init__.py  backtesting_engine.py  custom_backtester.py  qf_backtester.py
src/config/: __init__.py  settings.py
src/dashboard/: dashboard_api.py  performance_monitor.py
src/dashboard/templates/: dashboard.html
src/database/: db_manager.py
src/decision_engine/: four_model_engine.py  unified_four_model_engine.py  working_decision_engine.py
src/interface/: cli.py  user_journey.py
src/models/: __init__.py  base_models.py  basic_ml_models.py  focused_ml_models.py  ml_ensemble_model.py  quantitative_model.py  rl_decider_agent.py  sentiment_model.py  simple_ml_models.py  trading_models.py  trained_ml_ensemble.py
src/portfolio/: portfolio_manager.py
src/quantitative/: __init__.py  advanced_models.py  advanced_validation.py
src/risk/: __init__.py  focused_risk_management.py  risk_management.py
src/security/: auth.py
src/trading/: decision_engine.py
src/training/: feedback_trainer.py  focused_training_pipeline.py  four_model_training.py  simple_training_pipeline.py  training_pipeline.py
src/utils/: __init__.py  common_imports.py  config_manager.py  data_processing.py  feature_engineering.py  logger.py  performance_metrics.py  risk_utils.py
tests/: __init__.py  conftest.py  run_tests.py  test_unified_system.py
tests/integration/: test_trading_pipeline.py
tests/unit/: test_data_sources.py  test_risk_management.py  test_sentiment_analysis.py
